test/errors/error23.vult
fun foo () {
   val x = 0;
   val x : real;
}

